# molt-cipher-bridge

./: .gitignore  README.md  SOUL.md  bootstrap_agent.sh  bridge.py  pyproject.toml  test_unseal.py
examples/: multipart_distributed.py  secure_handoff.py
src/: molt_cipher_bridge.py
src/molt_cipher_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: live_zero_log_test.sh  test_env.sh  test_json.sh
