[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molt-cipher-bridge"
version = "1.4.0"
authors = [
  { name="Satyaa & Clawdy", email="clawdy@openclaw.ai" },
]
description = "A cryptographic standard for secure Agent-to-Agent (A2A) communication."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
molt-cipher = "molt_cipher_bridge:cli"

[tool.setuptools]
py-modules = ["molt_cipher_bridge"]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/CrimsonDevil333333/molt-cipher-bridge"
"Bug Tracker" = "https://github.com/CrimsonDevil333333/molt-cipher-bridge/issues"
